--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>DokoGamers</title>
   <link rel="stylesheet" href="asset/bootstrap-4.3.1-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="asset/fontawesome-free-5.7.2-web/css/all.css">
 </head>
@@ -88,12 +88,6 @@
 
         <div class="row">
             <div class="col-12">
-                <dl></dl>
-                <dl>
-                  <dt>
-                      <img src="../node_modules/support/imagen/logo-malaquita2.png" width="240" height="60" alt="">
-                  </dt>
-                </dl>
                 <dl>
                     <dt>Tecnologia, IPTV, Comercio e Importaciones</dt>
                 </dl>
